2022-03-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use rounding mode and simplified percentage options from qalculate-gtk in search provider
	* Clear convert unit on unit list deselect

2022-02-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not replace *, -, / with Unicode operators if cursor is within quotation marks
	* Refine use of quotation marks for function arguments
	* "Edit" history item using F2 and button release, after 250 ms, instead of button press to avoid interference with double click
	* Do not immediately add result to history on history operator button click if calculate-as-you-type is enabled
	* Fix display in history of symbol (with quotation marks, e.g. 'a')

2022-02-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add option to only show parsed or entered expression in history
	* Do not add duplicate results to history
	* Add copy unformatted ASCII menu items and replace copy separator with copy ASCII by default option
	* Set text/html, UTF8_STRING, and STRING clipboard targets when copying text
	* Replace operators in pasted expression

2022-02-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix completion visible after expression cleared with key repetition (stop updating completion if expression has changed during popup resize)
	* Use GtkFileChooserNative (on platforms other than Windows)

2022-02-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not show parsed value in history if the same as entered expression

2022-02-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Keep custom language setting (manually set in configuration file)

2022-02-07 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix keyboard shortcut and keypad button values and labels with whitespace characters
	* Only open matrix dialog if result does not fit
	* Fix store button with too long result

2022-02-04 Hanna Knutsson <hanna.knutsson@protonmail.com>
