@@ -2,6 +2,10 @@
 
 	* Use rounding mode and simplified percentage options from qalculate-gtk in search provider
 	* Clear convert unit on unit list deselect
+	* Copy result on Ctrl+C if expression has no selection
+	* Fix use of up and down keys in history and rpn stack lists
+	* Activate history item, as double-click, on Enter key press (if history has focus)
+	* Copy history item on Ctrl+C (if history has focus)
 
 2022-02-28 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
